--- a/app/src/main/res/layout/fragment_bill_history.xml
+++ b/app/src/main/res/layout/fragment_bill_history.xml
@@ -33,7 +33,6 @@
                android:layout_height="wrap_content"
                android:id="@+id/tvDate"
                android:text="20-06-2021"
-               app:currentDate='@{"222"}'
                android:textSize="@dimen/txt_16sp"
                android:layout_marginStart="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp"
@@ -43,11 +42,11 @@
 
        </LinearLayout>
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10dp"
-            android:layout_marginEnd="@dimen/_10dp"
-            android:src="@android:drawable/ic_menu_search"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+           android:layout_margin="@dimen/_10dp"
+            android:padding="@dimen/_12dp"
+            android:src="@drawable/search_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
