--- a/app/src/main/res/layout/fragment_sale_return.xml
+++ b/app/src/main/res/layout/fragment_sale_return.xml
@@ -38,15 +38,15 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardUseCompatPadding="true"
-                app:cardElevation="6dp"
                 android:id="@+id/cardHeaderView"
+                android:layout_margin="@dimen/_10dp"
+                android:background="@drawable/corner_four_grey"
+
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:cardCornerRadius="8dp">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -55,11 +55,11 @@
                     android:paddingTop="@dimen/_20dp"
                     android:paddingStart="@dimen/_10dp"
                     android:paddingEnd="@dimen/_10dp"
-                    android:background="@color/lite_grey"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/txtInvoice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -71,18 +71,20 @@
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Invoice : " />
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/tvInvoice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_color_main"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_16sp"
                         app:layout_constraintStart_toEndOf="@id/txtInvoice"
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="@{invoice.id}"
                         tools:text="777"/>
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/txtTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,11 +96,12 @@
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="Total : " />
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/tvTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_color_main"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_16sp"
                         android:layout_marginEnd="@dimen/_10dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +110,8 @@
                         tools:text="300"/>
 
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/txtItems"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -115,23 +119,24 @@
                         android:textSize="@dimen/txt_16sp"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="@dimen/_20dp"
-
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/txtInvoice"
                         android:text="Items : " />
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/tvItems"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_color_main"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_16sp"
                         app:layout_constraintStart_toEndOf="@id/txtItems"
                         app:layout_constraintTop_toTopOf="@+id/txtItems"
                         android:text="@{invoice.totalItems}"
                         tools:text="3"/>
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/txtDiscount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -142,11 +147,12 @@
                         app:layout_constraintTop_toTopOf="@+id/tvDiscount"
                         android:text="Discount : " />
 
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/tvDiscount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/text_color_main"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_16sp"
                         android:layout_marginTop="@dimen/_20dp"
                         android:layout_marginEnd="@dimen/_10dp"
@@ -158,16 +164,17 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/recyclerView"
+                android:layout_marginTop="@dimen/_10dp"
                 app:layout_constraintTop_toBottomOf="@+id/cardHeaderView"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:listitem="@layout/item_sale_return"
-                tools:itemCount="0" />
+                tools:itemCount="1" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -177,7 +184,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/recyclerView"
                 android:layout_marginTop="@dimen/_10dp">
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/txtAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -189,7 +197,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/tvAmount"
                     app:layout_constraintTop_toTopOf="@+id/tvAmount" />
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/tvAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -202,7 +211,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="RS 300" />
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_bold"
                     android:id="@+id/txtReduceDiscount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -210,7 +220,7 @@
                     android:text="Reduce Discount :  "
                     android:visibility="@{invoice.discount==null||invoice.discount==0 ? View.GONE : View.VISIBLE }"
                     android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_16sp"
+                    android:textSize="@dimen/txt_14sp"
                     android:textStyle="bold"
                     android:layout_marginStart="@dimen/_20dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -235,19 +245,21 @@
                     app:layout_constraintStart_toEndOf="@+id/txtReduceDiscount"
                     app:layout_constraintTop_toBottomOf="@+id/tvAmount" />
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/txtTotalGst"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10dp"
                     android:text="Total GST :  "
                     android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_16sp"
+                    android:textSize="@dimen/txt_14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/tvTotalGst"
                     app:layout_constraintTop_toTopOf="@+id/tvTotalGst" />
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/tvTotalGst"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -255,26 +267,28 @@
                     android:text="@{totalGst}"
                     android:layout_marginTop="@dimen/_10dp"
                     android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_16sp"
+                    android:textSize="@dimen/txt_14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etReduceDiscount"
                     tools:text="RS 300" />
 
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/txtTotalAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10dp"
                     android:text="Total Amount :  "
                     android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_16sp"
+                    android:textSize="@dimen/txt_14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toStartOf="@+id/tvTotalAmount"
                     app:layout_constraintTop_toTopOf="@+id/tvTotalAmount" />
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/tvTotalAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -282,14 +296,15 @@
                     android:text="@{totalAmount}"
                     android:layout_marginTop="@dimen/_10dp"
                     android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_16sp"
+                    android:textSize="@dimen/txt_14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvTotalGst"
                     tools:text="RS 300" />
 
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/txtReturnMode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -325,12 +340,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:padding="@dimen/_15dp"
                         android:inputType="none"
                         android:text="CreditNote" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:fontFamily="@font/montserrat_medium"
                     android:id="@+id/txtReturnModeOption"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -368,49 +385,50 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:padding="@dimen/_15dp"
+
                         android:inputType="none"
                         android:text="Cash" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
-                <soup.neumorphism.NeumorphCardView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:id="@+id/btnAdd"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/text_color_heading"
-                    app:neumorph_backgroundColor="@color/colorPrimaryDark"
-                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/_10dp"
                     android:layout_marginTop="@dimen/_20dp"
                     app:layout_constraintTop_toBottomOf="@+id/etReturnModeOption"
-                    app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-                    app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+                    app:cardUseCompatPadding="true"
+                    android:layout_marginStart="@dimen/_10dp"
+                    android:layout_marginEnd="@dimen/_10dp"
+                    app:cardBackgroundColor="@color/colorPrimary"
+                    android:textStyle="bold"
+                    android:textColor="@color/text_color_heading"
+                    android:gravity="center">
 
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
+                    <TextView android:fontFamily="@font/montserrat_medium"
+                        android:layout_width="match_parent"
+                        android:id="@+id/tv_update"
+                        android:layout_height="match_parent"
+                        android:text="@{returnMode}"
+                        android:padding="@dimen/_15dp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:textColor="@color/white"
+                        tools:text="REFUND"/>
+                    <ProgressBar
+                        android:id="@+id/progressBar"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="5dp">
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:indeterminate="true"
+                        android:visibility="gone"
+                        style="?android:attr/progressBarStyleHorizontal"/>
 
-                        <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textSize="20sp"
-                            android:padding="@dimen/_10dp"
-                            android:textStyle="bold"
-                            android:text="@{returnMode}"
-                            android:gravity="center"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            />
+                </androidx.cardview.widget.CardView>
 
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-                </soup.neumorphism.NeumorphCardView>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
