--- a/app/src/main/res/layout/item_bill_invoice_history.xml
+++ b/app/src/main/res/layout/item_bill_invoice_history.xml
@@ -37,70 +37,104 @@
                 android:layout_marginEnd="@dimen/_10dp"
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical">
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="2"
-
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
+                    <TextView android:fontFamily="@font/montserrat_bold"
+                        android:id="@+id/txtInvoiceID"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_13sp"
+                        android:text="Invoice : "/>
 
                     <TextView android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/tvInvoiceID"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/txtInvoiceID"
+                        app:layout_constraintTop_toTopOf="parent"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_13sp"
-                        android:text='@{"Invoice : "+invoice.id}'
-                        tools:text="Invoice : 2000"/>
+                        android:text='@{invoice.id+""}'
+                        tools:text="2000"/>
 
                     <TextView android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/item_name"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_13sp"
-                        android:gravity="end|center"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="10dp"
-                        android:text='@{"Items : "+invoice.totalItems}'
-                        tools:text="Items : 2000"/>
-                </LinearLayout>
+                        android:text='@{""+invoice.totalItems}'
+                        tools:text="2000"/>
 
-                <LinearLayout
+                    <TextView android:fontFamily="@font/montserrat_bold"
+                        android:id="@+id/txtitem_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_13sp"
+                        app:layout_constraintEnd_toStartOf="@+id/item_name"
+                        android:text="Items : "/>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="3"
-                    android:layout_marginTop="2dp"
-                    android:orientation="horizontal">
-
-                    <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_bold"
-                        android:id="@+id/time"
-                        android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+                    <TextView android:fontFamily="@font/montserrat_bold"
+                        android:id="@+id/txttime"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_13sp"
+                        android:text="Time : "/>
+
+                    <TextView android:fontFamily="@font/montserrat_bold"
+                        android:id="@+id/time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toEndOf="@+id/txttime"
+                        app:layout_constraintTop_toTopOf="parent"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_13sp"
-                        android:layout_marginStart="10dp"
                         app:timestampToDateTimeTxt="@{invoice.invoiceTime}"
-                        tools:text="Time : 2000"/>
+                        tools:text="2000"/>
 
                     <TextView android:fontFamily="@font/montserrat_bold"
                         android:id="@+id/totalAmount"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/txt_13sp"
-                        android:gravity="end|center"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginEnd="10dp"
-                        android:text='@{"Total : "+invoice.totalAmount}'
-                        tools:text="Total : 2000"/>
-                </LinearLayout>
+                        android:text='@{""+invoice.totalAmount}'
+                        tools:text="2000"/>
+
+                    <TextView android:fontFamily="@font/montserrat_bold"
+                        android:id="@+id/txttotalAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_13sp"
+                        app:layout_constraintEnd_toStartOf="@+id/totalAmount"
+                        android:text="Total : "/>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             </LinearLayout>
+
 
             <TextView android:fontFamily="@font/montserrat_regular"
                 android:layout_width="wrap_content"
@@ -116,6 +150,21 @@
                 android:layout_marginTop="-20dp"
                 android:textColor="@color/text_color_heading_reverse"
                 android:background="@color/colorPrimary"
+                />
+            <TextView android:fontFamily="@font/montserrat_regular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="      Cancelled      "
+                app:hideOnReturnedCancel="@{invoice.status}"
+                android:rotation="-45"
+                android:textSize="10sp"
+                android:layout_marginStart="-20dp"
+                android:layout_marginTop="-20dp"
+                android:textColor="@color/text_color_heading_reverse"
+                android:background="@color/red"
                 />
 
 
