--- a/app/src/main/res/layout/item_sale_return.xml
+++ b/app/src/main/res/layout/item_sale_return.xml
@@ -10,12 +10,11 @@
             type="com.kreativesquadz.billkit.model.InvoiceItem" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="6dp"
-        app:cardCornerRadius="8dp">
+        android:background="@drawable/corner_four_grey"
+        android:layout_margin="@dimen/_10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,41 +23,46 @@
             android:paddingTop="@dimen/_20dp"
             android:paddingStart="@dimen/_10dp"
             android:paddingEnd="@dimen/_10dp"
-            android:background="@color/lite_grey"
+            android:paddingBottom="@dimen/_5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_bold"
                 android:id="@+id/tvItemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text_color_main"
                 android:textSize="@dimen/txt_16sp"
+                android:layout_marginStart="@dimen/_10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text='@{(item.itemName.split(" ")[0])}'
                 android:textStyle="bold"
                 tools:text="Itemmmm"/>
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/txtPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10dp"
                 android:layout_weight="1"
                 android:textColor="@color/text_color_main"
-                android:textSize="@dimen/txt_16sp"
+                android:textSize="@dimen/txt_14sp"
                 android:layout_marginTop="@dimen/_10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvItemName"
                 android:text="Price : " />
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/tvPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text_color_main"
-                android:textSize="@dimen/txt_16sp"
+                android:textSize="@dimen/txt_14sp"
                 android:layout_marginEnd="@dimen/_10dp"
                 app:layout_constraintStart_toEndOf="@+id/txtPrice"
                 app:layout_constraintTop_toTopOf="@+id/txtPrice"
@@ -66,7 +70,8 @@
                 tools:text="300"/>
 
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/txtAvailableQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,7 +82,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="Available qty : " />
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/tvAvailableQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,7 +94,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="3" />
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/txtTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,7 +106,8 @@
                 app:layout_constraintTop_toTopOf="@+id/tvTotal"
                 android:text="Total : " />
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,7 +120,8 @@
                 android:text="@{item.totalPrice}"
                 tools:text="100"/>
 
-            <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+            <androidx.appcompat.widget.AppCompatTextView
+                android:fontFamily="@font/montserrat_medium"
                 android:id="@+id/txtReturnQty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -152,6 +161,7 @@
                     android:inputType="number"
                     android:paddingStart="@dimen/_20dp"
                     android:id="@+id/etQty"
+                    android:text="0"
                     android:background="@drawable/rectangle_outline_view"
                     android:layout_weight="1"
                     />
@@ -175,5 +185,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
